# investment-memo-orchestrator

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CASUAL_USER_GUIDE.md  CLAUDE.md  PERPLEXITY-API-FIX.md  PROJECT-STRUCTURE.md  README.md  SETUP.md  WARP.md  enrich-citations.py  export-branded.py  export-formats.py  export-to-google-docs.py  fix-citations.py  fix-markdown-citations.py  html-to-pdf.sh  improve-section.py  markdown-to-pdf.py  md-to-google-doc.py  md-to-pdf.sh  md2docx.py  poc-perplexity-section-research.py  pyproject.toml  requirements.txt  resume-from-last-interruption.py  rewrite-key-info.py  test-outline-sources.py  test-premium-sources.py  test_anthropic.py  test_perplexity.py  validate-outlines.py
.claude/: project-instructions.md  settings.local.json
changelog/: 2025-11-16_01.md  2025-11-16_02.md  2025-11-16_03.md  2025-11-16_04.md  2025-11-17_01.md  2025-11-18_01.md  2025-11-18_02.md  2025-11-18_03.md  2025-11-18_04.md  2025-11-19_01.md  2025-11-20_01.md  2025-11-21_01.md  2025-11-21_02.md  2025-11-22_01.md  2025-11-22_02.md  2025-11-22_03.md  2025-11-23_01.md  2025-11-23_02.md  2025-11-23_03.md  2025-11-26_01.md  2025-11-26_02.md  2025-11-26_03.md  2025-11-26_04.md  2025-11-26_05.md  2025-11-26_06.md  2025-11-26_07.md  2025-11-27_01.md  2025-11-27_02.md  2025-11-28_01.md  2025-11-28_02.md  2025-11-28_03.md  2025-11-28_04.md  2025-11-28_05.md  2025-11-30_01.md  2025-11-30_02.md  2025-11-30_03.md  2025-12-02_01.md  2025-12-05_01.md  2025-12-06_01.md  2025-12-06_02.md  (+29 more)
cli/: _docsend_diag.py  assemble_draft.py  capture_docsend.py  convert_to_png.py  correct_pdf_citations.py  describe_all_listed_portfolio_companies.py  enrich_citations.py  enrich_links.py  evaluate_memo.py  export-all-html.sh  export-all-modes.sh  export_branded.py  export_formats.py  (+16 more)
(+335 files in other folders)
