[project]
name = "investment-memo-orchestrator"
dynamic = ["version"]
description = "Multi-agent orchestration system for generating investment memos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",  # For brand configuration files
    "rich>=13.0.0",  # For nice terminal output
    "tavily-python>=0.3.0",  # Web search for research
    "httpx>=0.27.0",  # For web fetching
    "beautifulsoup4>=4.12.0",  # For HTML parsing
    "openai>=1.0.0",  # Optional: for Perplexity API (uses OpenAI SDK)
    "PyMuPDF>=1.24.0",  # For PDF deck analysis (imported as fitz)
    "pypandoc>=1.13",  # For markdown to Word conversion
    "weasyprint>=60.0",  # For HTML to PDF conversion (wkhtmltopdf replacement)
    "python-docx>=1.2.0",  # For Word document generation
    "google-auth>=2.0.0",  # For Google API authentication
    "google-auth-oauthlib>=1.0.0",  # For OAuth flow
    "google-auth-httplib2>=0.2.0",  # For HTTP authentication
    "google-api-python-client>=2.0.0",  # For Google Drive/Docs API
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools_scm]
# Version will be derived from git tags
# Tags should follow format: v0.1.0, v0.2.0, etc.
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
